--- a/trunk/English.lproj/MainMenu.xib
+++ b/trunk/English.lproj/MainMenu.xib
@@ -8,9 +8,9 @@
 		<string key="IBDocument.HIToolboxVersion">353.00</string>
 		<object class="NSMutableArray" key="IBDocument.EditedObjectIDs">
 			<bool key="EncodedWithXMLCoder">YES</bool>
-			<integer value="1305"/>
-			<integer value="1373"/>
+			<integer value="887"/>
 			<integer value="57"/>
+			<integer value="1540"/>
 		</object>
 		<object class="NSArray" key="IBDocument.PluginDependencies">
 			<bool key="EncodedWithXMLCoder">YES</bool>
@@ -4225,7 +4225,7 @@
 								<object class="NSTabViewItem" id="58576909">
 									<string key="NSIdentifier">1</string>
 									<object class="NSView" key="NSView" id="505839404">
-										<reference key="NSNextResponder" ref="952647372"/>
+										<nil key="NSNextResponder"/>
 										<int key="NSvFlags">256</int>
 										<object class="NSMutableArray" key="NSSubviews">
 											<bool key="EncodedWithXMLCoder">YES</bool>
@@ -4451,7 +4451,6 @@
 											</object>
 										</object>
 										<string key="NSFrame">{{10, 33}, {311, 436}}</string>
-										<reference key="NSSuperview" ref="952647372"/>
 									</object>
 									<string key="NSLabel">General</string>
 									<reference key="NSColor" ref="325191047"/>
@@ -5520,15 +5519,141 @@
 									<reference key="NSColor" ref="325191047"/>
 									<reference key="NSTabView" ref="952647372"/>
 								</object>
+								<object class="NSTabViewItem" id="971646890">
+									<string key="NSIdentifier">Item 2</string>
+									<object class="NSView" key="NSView" id="364190739">
+										<reference key="NSNextResponder" ref="952647372"/>
+										<int key="NSvFlags">256</int>
+										<object class="NSMutableArray" key="NSSubviews">
+											<bool key="EncodedWithXMLCoder">YES</bool>
+											<object class="NSDatePicker" id="886722140">
+												<reference key="NSNextResponder" ref="364190739"/>
+												<int key="NSvFlags">268</int>
+												<string key="NSFrame">{{155, 285}, {139, 148}}</string>
+												<reference key="NSSuperview" ref="364190739"/>
+												<bool key="NSEnabled">YES</bool>
+												<object class="NSDatePickerCell" key="NSCell" id="674304049">
+													<int key="NSCellFlags">71433728</int>
+													<int key="NSCellFlags2">0</int>
+													<object class="NSCalendarDate" key="NSContents">
+														<double key="NS.time">-5.959296e+08</double>
+														<object class="NSTimeZone" key="NS.timezone">
+															<string key="NS.name">US/Pacific</string>
+															<object class="NSMutableData" key="NS.data">
+																<bytes key="NS.bytes">VFppZgAAAAAAAAAAAAAAAAAAAAAAAAAEAAAABAAAAAAAAAC5AAAABAAAABCepkign7sVkKCGKqChmveQ
+y4kaoNIj9HDSYSYQ1v50INiArZDa/tGg28CQENzes6DdqayQ3r6VoN+JjpDgnneg4WlwkOJ+WaDjSVKQ
+5F47oOUpNJDmR1gg5xJREOgnOiDo8jMQ6gccIOrSFRDr5v4g7LH3EO3G4CDukdkQ76/8oPBxuxDxj96g
+8n/BkPNvwKD0X6OQ9U+ioPY/hZD3L4Sg+CiiEPkPZqD6CIQQ+viDIPvoZhD82GUg/chIEP64RyD/qCoQ
+AJgpIAGIDBACeAsgA3EokARhJ6AFUQqQBkEJoAcw7JAHjUOgCRDOkAmtvyAK8LCQC+CvoAzZzRANwJGg
+DrmvEA+priAQmZEQEYmQIBJ5cxATaXIgFFlVEBVJVCAWOTcQFyk2IBgiU5AZCRggGgI1kBryNKAb4heQ
+HNIWoB3B+ZAesfigH6HbkCB2KyAhgb2QIlYNICNq2hAkNe8gJUq8ECYV0SAnKp4QJ/7toCkKgBAp3s+g
+KupiECu+saAs036QLZ6ToC6zYJAvfnWgMJNCkDFnkiAycySQM0d0IDRTBpA1J1YgNjLokDcHOCA4HAUQ
+OOcaIDn75xA6xvwgO9vJEDywGKA9u6sQPo/6oD+bjRBAb9ygQYSpkEJPvqBDZIuQRC+goEVEbZBF89Mg
+Ry2KEEfTtSBJDWwQSbOXIErtThBLnLOgTNZqkE18laBOtkyQT1x3oFCWLpBRPFmgUnYQkFMcO6BUVfKQ
+VPwdoFY11JBW5TogWB7xEFjFHCBZ/tMQWqT+IFvetRBchOAgXb6XEF5kwiBfnnkQYE3eoGGHlZBiLcCg
+Y2d3kGQNoqBlR1mQZe2EoGcnO5BnzWagaQcdkGmtSKBq5v+Qa5ZlIGzQHBBtdkcgbq/+EG9WKSBwj+AQ
+cTYLIHJvwhBzFe0gdE+kEHT/CaB2OMCQdt7roHgYopB4vs2gefiEkHqer6B72GaQfH6RoH24SJB+XnOg
+f5gqkAABAAECAwEAAQABAAEAAQABAAEAAQABAAEAAQABAAEAAQABAAEAAQABAAEAAQABAAEAAQABAAEA
+AQABAAEAAQABAAEAAQABAAEAAQABAAEAAQABAAEAAQABAAEAAQABAAEAAQABAAEAAQABAAEAAQABAAEA
+AQABAAEAAQABAAEAAQABAAEAAQABAAEAAQABAAEAAQABAAEAAQABAAEAAQABAAEAAQABAAEAAQABAAEA
+AQABAAEAAQAB//+dkAEA//+PgAAE//+dkAEI//+dkAEMUERUAFBTVABQV1QAUFBUAAAAAAEAAAABA</bytes>
+															</object>
+														</object>
+														<string key="NS.format">%Y-%m-%d %H:%M:%S %z</string>
+													</object>
+													<reference key="NSSupport" ref="552746078"/>
+													<reference key="NSControlView" ref="886722140"/>
+													<double key="NSTimeInterval">0.000000e+00</double>
+													<int key="NSDatePickerElements">224</int>
+													<int key="NSDatePickerType">1</int>
+													<reference key="NSBackgroundColor" ref="381259550"/>
+													<reference key="NSTextColor" ref="689784061"/>
+												</object>
+											</object>
+											<object class="NSTextField" id="510988187">
+												<reference key="NSNextResponder" ref="364190739"/>
+												<int key="NSvFlags">268</int>
+												<string key="NSFrame">{{14, 285}, {136, 98}}</string>
+												<reference key="NSSuperview" ref="364190739"/>
+												<bool key="NSEnabled">YES</bool>
+												<object class="NSTextFieldCell" key="NSCell" id="74583545">
+													<int key="NSCellFlags">67239424</int>
+													<int key="NSCellFlags2">4194304</int>
+													<string key="NSContents">Changes the date that is used for processing. This is reset to the current date for the next refresh.</string>
+													<object class="NSFont" key="NSSupport">
+														<string key="NSName">LucidaGrande</string>
+														<double key="NSSize">1.100000e+01</double>
+														<int key="NSfFlags">16</int>
+													</object>
+													<reference key="NSControlView" ref="510988187"/>
+													<reference key="NSBackgroundColor" ref="325191047"/>
+													<reference key="NSTextColor" ref="689784061"/>
+												</object>
+											</object>
+											<object class="NSButton" id="110156891">
+												<reference key="NSNextResponder" ref="364190739"/>
+												<int key="NSvFlags">268</int>
+												<string key="NSFrame">{{15, 417}, {134, 18}}</string>
+												<reference key="NSSuperview" ref="364190739"/>
+												<bool key="NSEnabled">YES</bool>
+												<object class="NSButtonCell" key="NSCell" id="287281736">
+													<int key="NSCellFlags">67239424</int>
+													<int key="NSCellFlags2">0</int>
+													<string key="NSContents">Force Date:</string>
+													<reference key="NSSupport" ref="552746078"/>
+													<reference key="NSControlView" ref="110156891"/>
+													<int key="NSButtonFlags">1211912703</int>
+													<int key="NSButtonFlags2">130</int>
+													<object class="NSCustomResource" key="NSNormalImage">
+														<string key="NSClassName">NSImage</string>
+														<string key="NSResourceName">NSSwitch</string>
+													</object>
+													<object class="NSButtonImageSource" key="NSAlternateImage">
+														<string key="NSImageName">NSSwitch</string>
+													</object>
+													<string key="NSAlternateContents"/>
+													<string key="NSKeyEquivalent"/>
+													<int key="NSPeriodicDelay">200</int>
+													<int key="NSPeriodicInterval">25</int>
+												</object>
+											</object>
+											<object class="NSButton" id="335784828">
+												<reference key="NSNextResponder" ref="364190739"/>
+												<int key="NSvFlags">268</int>
+												<string key="NSFrame">{{11, 383}, {142, 32}}</string>
+												<reference key="NSSuperview" ref="364190739"/>
+												<bool key="NSEnabled">YES</bool>
+												<object class="NSButtonCell" key="NSCell" id="632623593">
+													<int key="NSCellFlags">67239424</int>
+													<int key="NSCellFlags2">134217728</int>
+													<string key="NSContents">Refresh Now</string>
+													<reference key="NSSupport" ref="552746078"/>
+													<reference key="NSControlView" ref="335784828"/>
+													<int key="NSButtonFlags">-2038284033</int>
+													<int key="NSButtonFlags2">129</int>
+													<string key="NSAlternateContents"/>
+													<string key="NSKeyEquivalent"/>
+													<int key="NSPeriodicDelay">200</int>
+													<int key="NSPeriodicInterval">25</int>
+												</object>
+											</object>
+										</object>
+										<string key="NSFrame">{{10, 33}, {311, 436}}</string>
+										<reference key="NSSuperview" ref="952647372"/>
+									</object>
+									<string key="NSLabel">Debug</string>
+									<reference key="NSColor" ref="325191047"/>
+									<reference key="NSTabView" ref="952647372"/>
+								</object>
 							</object>
-							<reference key="NSSelectedTabViewItem" ref="58576909"/>
+							<reference key="NSSelectedTabViewItem" ref="971646890"/>
 							<reference key="NSFont" ref="552746078"/>
 							<int key="NSTvFlags">0</int>
 							<bool key="NSAllowTruncatedLabels">YES</bool>
 							<bool key="NSDrawsBackground">YES</bool>
 							<object class="NSMutableArray" key="NSSubviews">
 								<bool key="EncodedWithXMLCoder">YES</bool>
-								<reference ref="505839404"/>
+								<reference ref="364190739"/>
 							</object>
 						</object>
 					</object>
@@ -6032,6 +6157,38 @@
 						<reference key="destination" ref="412621096"/>
 					</object>
 					<int key="connectionID">1538</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBOutletConnection" key="connection">
+						<string key="label">debugDatePicker</string>
+						<reference key="source" ref="55600954"/>
+						<reference key="destination" ref="886722140"/>
+					</object>
+					<int key="connectionID">1547</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBOutletConnection" key="connection">
+						<string key="label">delegate</string>
+						<reference key="source" ref="674304049"/>
+						<reference key="destination" ref="55600954"/>
+					</object>
+					<int key="connectionID">1548</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBOutletConnection" key="connection">
+						<string key="label">debugForceDateButton</string>
+						<reference key="source" ref="55600954"/>
+						<reference key="destination" ref="110156891"/>
+					</object>
+					<int key="connectionID">1551</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBActionConnection" key="connection">
+						<string key="label">readCalendars:</string>
+						<reference key="source" ref="702294528"/>
+						<reference key="destination" ref="335784828"/>
+					</object>
+					<int key="connectionID">1556</int>
 				</object>
 			</object>
 			<object class="IBMutableOrderedSet" key="objectRecords">
@@ -7703,6 +7860,7 @@
 							<bool key="EncodedWithXMLCoder">YES</bool>
 							<reference ref="58576909"/>
 							<reference ref="118348904"/>
+							<reference ref="971646890"/>
 						</object>
 						<reference key="parent" ref="677274943"/>
 					</object>
@@ -8391,6 +8549,83 @@
 						<reference key="object" ref="914825606"/>
 						<reference key="parent" ref="245580463"/>
 					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">1539</int>
+						<reference key="object" ref="971646890"/>
+						<object class="NSMutableArray" key="children">
+							<bool key="EncodedWithXMLCoder">YES</bool>
+							<reference ref="364190739"/>
+						</object>
+						<reference key="parent" ref="952647372"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">1540</int>
+						<reference key="object" ref="364190739"/>
+						<object class="NSMutableArray" key="children">
+							<bool key="EncodedWithXMLCoder">YES</bool>
+							<reference ref="886722140"/>
+							<reference ref="110156891"/>
+							<reference ref="510988187"/>
+							<reference ref="335784828"/>
+						</object>
+						<reference key="parent" ref="971646890"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">1541</int>
+						<reference key="object" ref="886722140"/>
+						<object class="NSMutableArray" key="children">
+							<bool key="EncodedWithXMLCoder">YES</bool>
+							<reference ref="674304049"/>
+						</object>
+						<reference key="parent" ref="364190739"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">1542</int>
+						<reference key="object" ref="674304049"/>
+						<reference key="parent" ref="886722140"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">1545</int>
+						<reference key="object" ref="510988187"/>
+						<object class="NSMutableArray" key="children">
+							<bool key="EncodedWithXMLCoder">YES</bool>
+							<reference ref="74583545"/>
+						</object>
+						<reference key="parent" ref="364190739"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">1546</int>
+						<reference key="object" ref="74583545"/>
+						<reference key="parent" ref="510988187"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">1549</int>
+						<reference key="object" ref="110156891"/>
+						<object class="NSMutableArray" key="children">
+							<bool key="EncodedWithXMLCoder">YES</bool>
+							<reference ref="287281736"/>
+						</object>
+						<reference key="parent" ref="364190739"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">1550</int>
+						<reference key="object" ref="287281736"/>
+						<reference key="parent" ref="110156891"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">1554</int>
+						<reference key="object" ref="335784828"/>
+						<object class="NSMutableArray" key="children">
+							<bool key="EncodedWithXMLCoder">YES</bool>
+							<reference ref="632623593"/>
+						</object>
+						<reference key="parent" ref="364190739"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">1555</int>
+						<reference key="object" ref="632623593"/>
+						<reference key="parent" ref="335784828"/>
+					</object>
 				</object>
 			</object>
 			<object class="NSMutableDictionary" key="flattenedProperties">
@@ -8656,6 +8891,14 @@
 					<string>1535.IBPluginDependency</string>
 					<string>1536.IBPluginDependency</string>
 					<string>1537.IBPluginDependency</string>
+					<string>1541.IBPluginDependency</string>
+					<string>1542.IBPluginDependency</string>
+					<string>1545.IBPluginDependency</string>
+					<string>1546.IBPluginDependency</string>
+					<string>1549.IBPluginDependency</string>
+					<string>1550.IBPluginDependency</string>
+					<string>1554.IBPluginDependency</string>
+					<string>1555.IBPluginDependency</string>
 					<string>29.IBEditorWindowLastContentRect</string>
 					<string>29.IBPluginDependency</string>
 					<string>29.ImportedFromIB2</string>
@@ -8993,6 +9236,14 @@
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
+					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
+					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
+					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
+					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
+					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
+					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
+					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
+					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<string>{{140, 407}, {276, 20}}</string>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<reference ref="9"/>
@@ -9090,7 +9341,7 @@
 				</object>
 			</object>
 			<nil key="sourceID"/>
-			<int key="maxID">1538</int>
+			<int key="maxID">1556</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<object class="NSMutableArray" key="referencedPartialClassDescriptions">
@@ -9123,6 +9374,8 @@
 							<string>calendarPatternTextField</string>
 							<string>columnHeaderPopUpButton</string>
 							<string>dateFormatTextField</string>
+							<string>debugDatePicker</string>
+							<string>debugForceDateButton</string>
 							<string>fridayTextField</string>
 							<string>mondayTextField</string>
 							<string>refreshIntervalStepper</string>
@@ -9141,6 +9394,8 @@
 							<string>NSTextField</string>
 							<string>NSPopUpButton</string>
 							<string>NSTextField</string>
+							<string>NSDatePicker</string>
+							<string>NSButton</string>
 							<string>NSTextField</string>
 							<string>NSTextField</string>
 							<string>NSStepper</string>
